# storage_ballast_helper

./: .gitignore  AGENTS.md  AUDIT_FINDINGS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Codex-upgrade-progress.json  README.md  SESSION_REPORT.md  SESSION_REPORT_EXPLORATION.md  UPGRADE_LOG.md
.beads/: .gitignore  beads.db  issues.jsonl  last-touched
.githooks/: pre-commit
.github/workflows/: cert-expiration.yml  ci.yml  release.yml
benches/: macos_performance.rs
crates/sbh_mach/: Cargo.toml
crates/sbh_mach/src/: lib.rs
docs/: adr-tui-integration-strategy.md  cleanup-rules-macos.md  dashboard-information-architecture.md  frankentui-compliance-plan.md  installer-dx-parity-matrix.md  launchd-troubleshooting.md  legacy-dashboard-deprecation-decision.md  macos-full-disk-access.md  macos-incident-case-study.md  macos.md  migrating-from-other-tools.md  quality-gate-runbook.md  sacred-paths.md  scanner-redesign-event-driven.md  testing-and-logging.md  tui-acceptance-gates-and-budgets.md  tui-go-nogo-signoff.md  tui-signoff-decision.md
docs/configs/: creative-mac.toml  developer-mac.toml  shared-mac-launchdaemon.toml
docs/images/macos/: README.md
docs/internal/: cfg-audit.md  codebase-audit-findings-2026-02-15.md  codebase-review-findings-2026-02-15.md  macos-parity-completion-audit.md  pressure-mapping.md
examples/: pressure_monitor.rs  scan_artifacts.rs
packaging/homebrew/Formula/: sbh.rb
scripts/: ci_docs_update_check.sh  e2e_test.sh  install.ps1  install.sh  quality-gate.sh
src/: cli_app.rs  decision_plane_tests.rs  lib.rs  main.rs  prelude.rs
src/ballast/: coordinator.rs  manager.rs  release.rs
src/cli/: assets.rs  bootstrap.rs  dashboard.rs  from_source.rs  install.rs  integrations.rs  mod.rs  uninstall.rs  update.rs  wizard.rs
src/core/: config.rs  errors.rs  mod.rs  paths.rs  update_cache.rs
src/daemon/: loop_main.rs  mod.rs  notifications.rs  policy.rs  process_io_history.rs  self_monitor.rs  service.rs  signals.rs
src/daemon/service/: launchctl.rs  launchd.rs  systemd.rs
src/logger/: dual.rs  jsonl.rs  mod.rs  sqlite.rs  stats.rs
src/monitor/: ewma.rs  fs_stats.rs  guardrails.rs  mod.rs  pid.rs  predictive.rs  special_locations.rs  voi_scheduler.rs
src/platform/: cleanup_catalog.rs  mod.rs  pal.rs  sacred.toml  sacred_catalog.rs  types.rs
src/platform/linux/: cleanup_catalog.rs  disk.rs  memory.rs  mod.rs  process.rs  service.rs  writeback.rs
src/platform/macos/: cleanup_catalog.rs  libproc.rs  mod.rs  pal.rs  sacred.toml  sacred_catalog.rs  sys.rs
src/scanner/: decision_record.rs  deletion.rs  engine.rs  events.rs  index.rs  log_truncator.rs  merkle.rs  mod.rs  patterns.rs  protection.rs  scoring.rs  walker.rs
src/tui/: adapters.rs  e2e_artifact.rs  incident.rs  input.rs  layout.rs  mod.rs  model.rs  parity_harness.rs  preferences.rs  render.rs  runtime.rs  telemetry.rs  terminal_guard.rs  test_artifact.rs  test_fault_injection.rs  test_harness.rs  test_operator_benchmark.rs  test_properties.rs  test_scenario_drills.rs  test_snapshot_golden.rs  test_stress.rs  test_unit_coverage.rs  theme.rs  update.rs  widgets.rs
src/tuning/: bandwidth.rs  mod.rs  writeback.rs
tests/: dashboard_integration_tests.rs  decision_plane_e2e.rs  fallback_verification.rs  installer_e2e.rs  integration_tests.rs  proof_harness.rs  regression_path_traversal.rs  regression_risky_patterns.rs  repro_ballast_restart_stability.rs  repro_dangerous_patterns.rs  repro_glob.rs  repro_issue.rs  repro_merkle_index_integration.rs  repro_risky_patterns.rs  repro_symlink_loop.rs  repro_tui_panic.rs  stress_harness.rs  stress_tests.rs
tests/common/: mod.rs
tests/snapshots/: launchd_system.plist  launchd_system.snap  launchd_user.plist  launchd_user.snap  status_memory_pressure_json.snap
