[package]
name = "storage_ballast_helper"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "System service that prevents disk-full scenarios from coding agent swarms via ballast files, artifact scanning, and special location monitoring."
readme = "README.md"
keywords = ["disk", "ballast", "cleanup", "daemon", "storage"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "sbh"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# Database
rusqlite = { version = "0.33", features = ["bundled"] }
# Error handling
thiserror = "2.0"
# Terminal output
colored = "3.0"
# Timestamps
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Concurrency (no tokio — std threads + channels)
parking_lot = "0.12"
crossbeam-channel = "0.5"
# Fast byte scanning
memchr = "2.7"
# Pattern matching for artifact classification
regex = "1.11"
# Signal handling for graceful shutdown wiring
signal-hook = "0.3"
# Ballast generation and randomized test fixtures
rand = "0.9"

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "signal", "user"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.17"
proptest = "1.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
