[package]
name = "storage_ballast_helper"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "System service that prevents disk-full scenarios from coding agent swarms via ballast files, artifact scanning, and special location monitoring."
readme = "README.md"
keywords = ["disk", "ballast", "cleanup", "daemon", "storage"]
categories = ["command-line-utilities", "filesystem"]

[lib]
name = "storage_ballast_helper"
path = "src/lib.rs"

[[bin]]
name = "sbh"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "daemon", "sqlite", "tui"]
cli = ["dep:clap", "dep:clap_complete", "dep:colored", "dep:crossterm", "sqlite", "daemon"]
daemon = ["dep:signal-hook"]
tui = ["dep:ftui-core", "dep:ftui-backend", "dep:ftui-tty", "cli"]
sqlite = ["dep:rusqlite"]

[dependencies]
# CLI (optional — gated behind "cli" feature)
clap = { version = "4.5", features = ["derive"], optional = true }
clap_complete = { version = "4.5", optional = true }
colored = { version = "3.0", optional = true }
crossterm = { version = "0.28", optional = true }
# Serialization (core)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# Database (optional — gated behind "sqlite" feature)
rusqlite = { version = "0.33", features = ["bundled", "functions"], optional = true }
# Error handling (core)
thiserror = "2.0"
# TUI (optional — gated behind "tui" feature)
ftui-core = { path = "/dp/frankentui/crates/ftui-core", optional = true }
ftui-backend = { path = "/dp/frankentui/crates/ftui-backend", optional = true }
ftui-tty = { path = "/dp/frankentui/crates/ftui-tty", optional = true }
# Timestamps (core)
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Concurrency (core — used by scanner walker, not just daemon)
parking_lot = "0.12"
crossbeam-channel = "0.5"
# Fast byte scanning (core)
memchr = "2.7"
# Pattern matching for artifact classification (core)
regex = "1.11"
# Supply-chain checksum verification (core)
sha2 = "0.10"
# Signal handling (optional — gated behind "daemon" feature)
signal-hook = { version = "0.3", optional = true }
# Ballast generation and randomized test fixtures (core)
rand = "0.9"

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "signal", "user"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.17"
proptest = "1.6"
filetime = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
