[package]
name = "sbh_mach"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Safe macOS Mach task-info adapter for storage_ballast_helper"

[dependencies]
dispatch2 = { version = "0.3.1", default-features = false, features = ["std", "objc2"] }
libc = "0.2"
mach2 = "0.6.0"
proc_pidinfo = "0.1.4"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
